--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
         android:layout_weight="4">
 
         <ListView
+            tools:listitem="@layout/list"
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
