--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,127 +7,105 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/pink"
-        android:orientation="horizontal">
-
-        <ImageView
+        <include
+            android:id="@id/toolbar"
+            layout="@layout/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/dog2" />
-    </LinearLayout>
+            android:layout_height="110dp" />
+
+    <ImageView
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:src="@drawable/dingguldanggul" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="640dp"
         android:layout_weight="4"
-        android:gravity="center">
+        android:gravity="bottom"
+        android:orientation="vertical">
 
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@drawable/border_down"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:text="수동 입력"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="7"
-            android:inputType="number"
-            android:textSize="20dp" />
-
-        <android.widget.Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="2"
-            android:background="@drawable/radius"
-            android:onClick="messageSend"
-            android:text="전송"
-
-            android:textSize="18dp" />
-    </LinearLayout>
-
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/content_srl"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_weight="4">
-
-        <ListView
-            tools:listitem="@layout/list"
-            android:id="@+id/listView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="235dp"
+            android:layout_weight="1"
+            android:background="@drawable/border_down"
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="수동 입력"
+                android:textSize="20dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/pink"
-        android:orientation="horizontal">
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:inputType="number"
+                android:textSize="20dp" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            <android.widget.Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="2"
+                android:background="@drawable/radius"
+                android:onClick="messageSend"
+                android:text="전송"
 
-            <ImageView
-                android:id="@+id/messageImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/message" />
-
+                android:textSize="18dp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/content_srl"
+            android:layout_width="381dp"
+            android:layout_height="15dp"
+            android:layout_alignBottom="@id/content_srl"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="4">
 
-            <ImageView
-                android:id="@+id/calculatorImage"
+            <ListView
+                android:id="@+id/listView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="calculatorClick"
-                android:src="@drawable/calculator" />
+                android:layout_alignBottom="@+id/content_srl"
+                tools:listitem="@layout/list" />
 
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/hotelImageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:onClick="checkoutClick"
-                android:src="@drawable/hotel" />
-
-        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="95dp"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignLeft="@id/tab_layout"
+        android:layout_alignEnd="@id/tab_layout"
+        android:layout_alignBottom="@id/tab_layout"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="-13dp"
+        android:layout_marginTop="526dp"
+        android:background="@android:color/transparent"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:tabRippleColor="@null" />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="89dp"
+        android:layout_alignBottom="@+id/tab_layout"
+        android:layout_marginTop="0dp"
+        android:background="#FFCCCC" />
+
+</RelativeLayout>
