--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,15 +6,15 @@
         <item name="colorPrimaryVariant">#594A43</item>
         <item name="colorOnPrimary">#E9F8F8F8</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">#FFFFFF</item>
+        <item name="colorSecondaryVariant">@color/white</item>
+        <item name="colorOnSecondary">#594A43</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+
 
 
         <item name="android:windowBackground">@color/white</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">#594A43</item>
         <!-- Customize your theme here. -->
 
         <item name="windowActionBar">false</item>
